# RustRedis

./: Cargo.toml
src/: main.rs
src/binn/: tool1.rs
src/controllers/: mod.rs  reader_controller.rs  record_controller.rs
src/database/: manager_impl.rs  mod.rs
src/models/: read.rs  record.rs
src/services/: reader_service.rs  record_service.rs
